--- a/css/styles_fees.css
+++ b/css/styles_fees.css
@@ -176,6 +176,10 @@ a {
         margin: 0px 20px;
         padding: 10%;
     }
+
+    .fees_title {
+        padding: 10% 0% !important;
+    }
 }
 
 /* adjust padding so content is centred in viewport */
